--- a/OhMyDog/index.html
+++ b/OhMyDog/index.html
@@ -14,6 +14,8 @@
     <link rel="icon" type="image/png" sizes="32x32" href="icons/favicon-32x32.png">
     <link rel="icon" type="image/png" sizes="16x16" href="icons/favicon-16x16.png">
     <link rel="icon" type="image/ico" href="favicon.ico">
+
+    <link href="https://fonts.googleapis.com/css?family=Poppins:300,400,400i,500,700" rel="stylesheet">
   </head>
   <body>
     <!-- quasar:entry-point -->
